[gd_scene load_steps=5 format=2]

[ext_resource path="res://systems/shortcut_menu/script/Fullscreen.gd" type="Script" id=1]
[ext_resource path="res://systems/shortcut_menu/script/CommandLine.gd" type="Script" id=2]
[ext_resource path="res://systems/shortcut_menu/script/ShortcutMenu.gd" type="Script" id=3]
[ext_resource path="res://systems/shortcut_menu/script/accept_dialog.gd" type="Script" id=4]

[node name="ShortcutMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.0292969
anchor_top = 0.05
anchor_right = 0.970703
anchor_bottom = 0.95
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer" groups=["button"]]
offset_right = 1807.0
offset_bottom = 37.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
offset_top = 6.0
offset_right = 1699.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 1707.0
offset_right = 1807.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 100, 0 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer" groups=["button"]]
offset_top = 57.0
offset_right = 1807.0
offset_bottom = 94.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
offset_top = 6.0
offset_right = 1699.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
offset_left = 1707.0
offset_right = 1807.0
offset_bottom = 37.0
custom_minimum_size = Vector2( 100, 0 )

[node name="ShortcutRemapDialog" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -36.0
offset_right = 94.0
offset_bottom = 36.0
exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPressed" type="Label" parent="ShortcutRemapDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -36.0
text = "press a key"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ShortcutRemapDialog"]
offset_left = 110.0
offset_top = 40.0
offset_right = 148.0
offset_bottom = 60.0
focus_mode = 0
focus_mode = 0
text = "ok"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="ShortcutRemapDialog"]
offset_left = 30.0
offset_top = 40.0
offset_right = 83.0
offset_bottom = 60.0
focus_mode = 0
focus_mode = 0
text = "cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -20.0
offset_right = 51.0
pivot_offset = Vector2( -1381, -388 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="HBoxContainer"]
offset_right = 74.0
offset_bottom = 37.0
text = "back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Default" type="Button" parent="HBoxContainer"]
offset_left = 94.0
offset_right = 194.0
offset_bottom = 37.0
text = "default"

[connection signal="pressed" from="ShortcutRemapDialog/Button" to="ShortcutRemapDialog" method="_on_Button_pressed"]
[connection signal="pressed" from="ShortcutRemapDialog/Button2" to="ShortcutRemapDialog" method="_on_Button2_pressed"]
[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="HBoxContainer/Default" to="." method="_on_Default_pressed"]
